[package]
name = "hugepage-rs"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "wrapped allocator for linux hugepage"
repository = "https://github.com/cppcoffee/hugepage-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
libc = "0.2"
